# Mdb

./: .gitignore  .gitmodules  CMakeLists.txt  ConvertToUtf8Bom.py  LICENSE  ParseModel.py  ParsePackageModel.py  ParseShortField.py  ParseShortItem.py  ParseTableModel.py  README.en.md  README.md  UpdateSubmodule.bat  UpdateSubmodule.sh  clearall.py  copyheader.py  copymodel.py  geninc.py  parseall.py  pump.py  pumpall.py  pumplist.xml  pumptemp.py  vcpkg.json
Model/: Types.xml  parselist.xml
Model/Dbo/: TradeTables.xml
Model/Tables/: ShortTables.xml  SimExchange.xml  TableNames.xml  Tables.xml
Source/: pumplist.xml
Source/DB/DBOperate/: DB.h  DBOperateImpl.cpp  DBWriter.cpp
Source/DB/DBWriter/: DBOperateImpl.h  DBWriter.h
Source/DB/DuckDB/: DuckDB.cpp  DuckDB.h  DuckDBCommon.cpp  DuckDBCommon.h
Source/DB/InitMdb/: InitMdbFromCsv.cpp  InitMdbFromCsv.h  InitMdbFromDB.cpp  InitMdbFromDB.h
Source/DB/MariaDB/: MariaDB.cpp  MariaDB.h  MariaDBSqlString.h
Source/DB/Mdb/: Mdb.cpp  Mdb.h  MdbIndexComp.cpp  MdbIndexComp.h  MdbIndexes.cpp  MdbIndexes.h  MdbPrimaryKeyComp.cpp  MdbPrimaryKeyComp.h  MdbPrimaryKeys.cpp  MdbPrimaryKeys.h  MdbStructs.cpp  MdbStructs.h  MdbSubscriber.h  MdbTables.cpp  MdbTables.h
Source/DB/MysqlDB/: MysqlDB.cpp  MysqlDB.h  MysqlDBSqlString.h
Source/DB/SqliteDB/: SqliteDB.cpp  SqliteDB.h  SqliteDBSqlString.h
Source/DataStruct/: DataEnum.cpp  DataEnum.h  DataStruct.cpp  DataStruct.h  DataType.cpp  DataType.h
Source/Dbo/: DboDB.cpp  DboDB.h  DboStructs.cpp  DboStructs.h  pumplist.xml
Source/Index/: IndexComp.cpp  IndexComp.h  Indexes.cpp  Indexes.h  PrimaryKeyComp.cpp  PrimaryKeyComp.h  PrimaryKeys.cpp  PrimaryKeys.h  UniqueKeyComp.cpp  UniqueKeyComp.h  UniqueKeys.cpp  UniqueKeys.h
Source/Mdb/: Mdb.cpp  Mdb.h  MdbTables.cpp  MdbTables.h
Source/SimExchangeDB/DBOperate/: DB.h  DBOperateImpl.cpp  DBOperateImpl.h  DBWriter.cpp  DBWriter.h
Source/SimExchangeDB/DuckDB/: DuckDB.cpp  DuckDB.h
Source/SimExchangeDB/InitMdb/: InitMdbFromCsv.cpp  InitMdbFromCsv.h  InitMdbFromDB.cpp  InitMdbFromDB.h
Source/SimExchangeDB/MariaDB/: MariaDB.cpp  MariaDB.h
Source/SimExchangeDB/Mdb/: Mdb.cpp  Mdb.h  MdbIndexComp.cpp  MdbIndexComp.h  MdbIndexes.cpp  MdbIndexes.h  MdbPrimaryKeyComp.cpp  MdbPrimaryKeyComp.h  MdbPrimaryKeys.cpp  MdbPrimaryKeys.h  MdbStructs.cpp  MdbStructs.h  MdbSubscriber.h  MdbTables.cpp  MdbTables.h
Source/SimExchangeDB/MysqlDB/: MysqlDB.cpp  MysqlDB.h
Source/SimExchangeDB/SqliteDB/: SqliteDB.cpp  SqliteDB.h
Source/Types/: Types.h  pumplist.xml
Sql/: InsertBaseData.sql  pumplist.xml  t_MdbCmeInstrumentBrief.sql
Sql/Dbo/: CreateAdminTables.sql  CreateTradeTables.sql  pumplist.xml
Sql/Duckdb/: CreateDBTables.sql  CreateSimExchangeDBTables.sql  DropSimExchangeDBTables.sql  Test.duckdb
Sql/Mysql/: CreateDBTables.sql  CreateSimExchangeDBTables.sql  DropDBTables.sql
Sql/Sqlite/: CreateDBTables.sql  CreateSimExchangeDBTables.sql  DropDBTables.sql  DropSimExchangeDBTables.sql  Test.sqlitedb
Test/: CMakeLists.txt
Test/TestDB/: CMakeLists.txt  TestDB.cpp
Test/TestDB/Src/: TestDB.cpp
Test/TestDbo/: CMakeLists.txt
Test/TestDbo/Src/: TestDbo.cpp
Test/TestMariaDB/: CMakeLists.txt
Test/TestMariaDB/Src/: TestDB.cpp
Test/TestMdb/: CMakeLists.txt
Test/TestMdb/Src/: TestMdb.cpp
include/Mdb/Duckdb/: Duckdb.h
include/Mdb/DuckdbWrapper/: DuckdbWrapper.h
include/Mdb/Mariadb/: Mariadb.h
include/Mdb/MariadbWrapper/: MariadbWrapper.h
include/Mdb/Mdb/: DB.h  DBOperateImpl.h  DBWriter.h  InitMdbFromCsv.h  InitMdbFromDB.h  Mdb.h  MdbIndexComp.h  MdbIndexes.h  MdbPrimaryKeyComp.h  MdbPrimaryKeys.h  MdbStructs.h  MdbSubscriber.h  MdbTables.h
include/Mdb/Mysql/: Mysql.h
include/Mdb/MysqlWrapper/: MysqlWrapper.h
include/Mdb/Sqlite/: Sqlite.h
include/Mdb/SqliteWrapper/: SqliteWrapper.h
lib/Debug/: DuckdbWrapperd.exp  Duckdbd.exp  MariadbWrapperd.exp  Mariadbd.exp  Mdbd.exp  MysqlWrapperd.exp  Mysqld.exp  SqliteWrapperd.exp  Sqlited.exp  TestDB.exp
lib/Release/: Duckdb.exp  DuckdbWrapper.exp  Mariadb.exp  MariadbWrapper.exp  Mdb.exp  Mysql.exp  MysqlWrapper.exp  Sqlite.exp  SqliteWrapper.exp  TestDB.exp
src/Mdb/Duckdb/: Duckdb.cpp  DuckdbCommon.cpp  DuckdbCommon.h
src/Mdb/DuckdbWrapper/: DuckdbCommon.cpp  DuckdbSqlString.h  DuckdbWrapper.cpp
src/Mdb/Mariadb/: Mariadb.cpp  MariadbSqlString.h
src/Mdb/MariadbWrapper/: MariadbWrapper.cpp
src/Mdb/Mdb/: DBOperateImpl.cpp  DBOperateImpl.h  DBWriter.cpp  InitMdbFromCsv.cpp  InitMdbFromDB.cpp  Mdb.cpp  MdbIndexComp.cpp  MdbIndexes.cpp  MdbPrimaryKeyComp.cpp  MdbPrimaryKeys.cpp  MdbStructs.cpp  MdbTables.cpp
src/Mdb/Mysql/: Mysql.cpp
src/Mdb/MysqlWrapper/: MysqlSqlString.h  MysqlWrapper.cpp
src/Mdb/Sqlite/: Sqlite.cpp
src/Mdb/SqliteWrapper/: SqliteSqlString.h  SqliteWrapper.cpp
