cmake_minimum_required(VERSION 3.5)
SET(PROJECT_NAME "DataBase")
project(${PROJECT_NAME})

set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 20)
set(BUILD_TEST_PROJECT 1)

add_definitions(-DUNICODE -D_UNICODE)
message("CMAKE_BUILD_TYPE:" ${CMAKE_BUILD_TYPE})
message("CMAKE_SYSTEM_NAME:" ${CMAKE_SYSTEM_NAME})
message("CMAKE_CL_64:" ${CMAKE_CL_64})
IF(CMAKE_SYSTEM_NAME MATCHES "Windows")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /bigobj")
	#string(REPLACE "/MD" "/MT" CMAKE_CXX_FLAGS_RELEASE ${CMAKE_CXX_FLAGS_RELEASE})
	#string(REPLACE "/MDd" "/MTd" CMAKE_CXX_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG})
	add_definitions("-DWINDOWS")
	add_definitions("-D_CRT_SECURE_NO_WARNINGS")
	add_definitions("-D_SILENCE_CXX17_CODECVT_HEADER_DEPRECATION_WARNING")
ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Linux")
	IF(CMAKE_BUILD_TYPE MATCHES "Debug")
		#list(APPEND CMAKE_CXX_FLAGS "-fsanitize=address")
	ENDIF()
	add_definitions("-DLINUX")
ENDIF()
message("CMAKE_CXX_FLAGS:" ${CMAKE_CXX_FLAGS})
message("CMAKE_CXX_FLAGS_RELEASE:" ${CMAKE_CXX_FLAGS_RELEASE})
message("CMAKE_CXX_FLAGS_DEBUG:" ${CMAKE_CXX_FLAGS_DEBUG})

macro(add_file name dir filename)
	include_directories(${dir})
	file(GLOB_RECURSE fullname ${dir}/${filename})
	source_group(${name} FILES ${fullname})
	set(all_file ${all_file} ${fullname})
endmacro(add_file)

macro(add_package name dir)
	include_directories(${dir})
	set(hfind ${ARGV1})
	string(APPEND hfind "/*.h")
	set(cppfind ${ARGV1})
	string(APPEND cppfind "/*.cpp")
	set(cfind ${ARGV1})
	string(APPEND cfind "/*.c")
	file(GLOB_RECURSE name_header ${hfind})
	file(GLOB_RECURSE name_cpp ${cppfind})
	file(GLOB_RECURSE name_c ${cfind})
	source_group(${ARGV0} FILES ${name_header} ${name_cpp} ${name_c})
	set(all_file ${all_file} ${name_header} ${name_cpp} ${name_c})
endmacro(add_package)

macro(add_res_package name dir)
	include_directories(${dir})
	set(resfind ${ARGV1})
	string(APPEND resfind "/*")
	file(GLOB_RECURSE res ${resfind})
	source_group(${ARGV0} FILES ${res})
	set(all_file ${all_file} ${res})
endmacro(add_res_package)

macro(include_package name dir)
	include_directories(${dir})
	set(hfind ${ARGV1})
	string(APPEND hfind "/*.h")
	file(GLOB_RECURSE name_header ${hfind})
	source_group(${ARGV0} FILES ${name_header})
	set(all_file ${all_file} ${name_header})
endmacro(include_package)


string(TIMESTAMP BUILD_TIMESTAMP "%Y%m%d-%H%M%S")
message("Build timestamp is ${BUILD_TIMESTAMP}")
 
include_package(PersonalLibHeader ${CMAKE_SOURCE_DIR}/../Libs/PersonalLib/include)
if(CMAKE_SYSTEM_NAME MATCHES "Windows")
	link_directories(${CMAKE_SOURCE_DIR}/../Libs/PersonalLib/win64)
elseif(CMAKE_SYSTEM_NAME MATCHES "Linux")
	link_directories(${CMAKE_SOURCE_DIR}/../Libs/PersonalLib/linux)
endif()

add_subdirectory(Target)
add_subdirectory(Test)
