SET(PROJECT_NAME "TestDB")
project(${PROJECT_NAME})
message("PROJECT_NAME:" ${PROJECT_NAME})


add_package(Src ./Src)
add_package(DBWriter ${CMAKE_SOURCE_DIR}/Source/DB/DBWriter)
add_package(InitMdb ${CMAKE_SOURCE_DIR}/Source/DB/InitMdb)
add_package(Mdb ${CMAKE_SOURCE_DIR}/Source/DB/Mdb)
add_package(MysqlDB ${CMAKE_SOURCE_DIR}/Source/DB/MysqlDB)
#add_package(MariaDB ${CMAKE_SOURCE_DIR}/Source/DB/MariaDB)
add_package(DuckDB ${CMAKE_SOURCE_DIR}/Source/DB/DuckDB)
add_package(SqliteDB ${CMAKE_SOURCE_DIR}/Source/DB/SqliteDB)


include_package(duckdb ${LibsPath}/PersonalLib/include)
include_package(duckdb ${LibsPath}/duckdb/include)
include_package(duckdb ${LibsPath}/SQLite/3.36.0/include)
include_package(MysqlConnector ${LibsPath}/MysqlConnector/9.0.0/include)
#include_package(duckdb ${LibsPath}/MariaDB/1.1.5/include/mariadb)

link_directories(${LibsPath}/PersonalLib/win64)
link_directories(${LibsPath}/duckdb/win64)
link_directories(${LibsPath}/SQLite/3.36.0/win64)
link_directories(${LibsPath}/MysqlConnector/9.0.0/win64/debug)
#link_directories(${LibsPath}/MariaDB/1.1.5/win64)

add_executable(${PROJECT_NAME} ${all_file})
if(CMAKE_SYSTEM_NAME MATCHES "Windows")
elseif(CMAKE_SYSTEM_NAME MATCHES "Linux")
	target_link_libraries(${PROJECT_NAME} pthread dl)	
endif()
target_link_libraries(${PROJECT_NAME} PersonalLib)
target_link_libraries(${PROJECT_NAME} duckdb)
target_link_libraries(${PROJECT_NAME} sqlite3)
target_link_libraries(${PROJECT_NAME} mysqlcppconn)
#target_link_libraries(${PROJECT_NAME} mariadbcpp)


IF(CMAKE_SYSTEM_NAME MATCHES "Windows")
	configure_file("${LibsPath}/PersonalLib/win64/PersonalLib.dll" "${CMAKE_CURRENT_BINARY_DIR}/PersonalLib.dll" COPYONLY)
	configure_file("${LibsPath}/duckdb/win64/duckdb.dll" "${CMAKE_CURRENT_BINARY_DIR}/duckdb.dll" COPYONLY)
	configure_file("${LibsPath}/SQLite/3.36.0/win64/sqlite3.dll" "${CMAKE_CURRENT_BINARY_DIR}/sqlite3.dll" COPYONLY)
	configure_file("${LibsPath}/MysqlConnector/9.0.0/win64/debug/libcrypto-3-x64.dll" "${CMAKE_CURRENT_BINARY_DIR}/libcrypto-3-x64.dll" COPYONLY)
	configure_file("${LibsPath}/MysqlConnector/9.0.0/win64/debug/libssl-3-x64.dll" "${CMAKE_CURRENT_BINARY_DIR}/libssl-3-x64.dll" COPYONLY)
	configure_file("${LibsPath}/MysqlConnector/9.0.0/win64/debug/mysqlcppconn-10-vs14.dll" "${CMAKE_CURRENT_BINARY_DIR}/mysqlcppconn-10-vs14.dll" COPYONLY)
	configure_file("${LibsPath}/MysqlConnector/9.0.0/win64/debug/mysqlcppconnx-2-vs14.dll" "${CMAKE_CURRENT_BINARY_DIR}/mysqlcppconnx-2-vs14.dll" COPYONLY)
endif()